# interactivebrokers_scanner

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: fetch-prices.yml  scan.yml
scanner/: scan.py  uptrend.csv
scanner/data/prices/: fetch_prices.py
scanner/data/prices/raw/: A.csv  AAPL.csv  ABBV.csv  ABNB.csv  ABT.csv  ACGL.csv  ACN.csv  ADBE.csv  ADI.csv  ADM.csv  ADP.csv  ADSK.csv  AEE.csv  AEP.csv  AES.csv  AFL.csv  AIG.csv  AIZ.csv  AJG.csv  AKAM.csv  ALB.csv  ALGN.csv  ALL.csv  ALLE.csv  AMAT.csv  AMCR.csv  AMD.csv  AME.csv  AMGN.csv  AMP.csv  AMT.csv  AMZN.csv  ANET.csv  AON.csv  AOS.csv  APA.csv  APD.csv  APH.csv  APO.csv  APP.csv  (+463 more)
scanner/data/universe/: fetch_ivv_holdings.py  holdings.py  holdings_2026-07-16.xlsx  sp500_current.csv
scanner/filters/: baseline_filters.py  trend_filters.py
